@@ -1,6 +1,7 @@
 Version 2.6
 ~~~~~~~~~~~
 * Some improvements to VDIF file reading for very gappy data
+* Some improvements to VDIF for frame sizes greatly differing from 5000 bytes
 
 Version 2.5
 ~~~~~~~~~~~
